<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Azone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_sevice">SeviceActivity</string>
    <string name="no_network">当前网络不可用，请检查网络连接！</string>
    <string name="quit">再按一次退出Azone</string>
    <string name="serviceground">服务网点</string>
    <string name="afterservice">售后政策</string>
    <string name="turequery">正品查询</string>
    <string name="userface">用户反馈</string>
    <string name="amgoonet">AMGOO官网</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="record">销售记录</string>
    <string name="afterpay">已付款</string>
    <string name="futurepay">待付款</string>
    <string name="moneyrecord">提成记录</string>
    <string name="myinfo">我的资料</string>
    <string name="myface">我的反馈</string>
    <string name="mywork">我的办公</string>
    <string name="submitmessage">提交销售信息</string>
    <string name="paymoneylook">收款审核</string>
    <string name="set">设置</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_set">设置</string>
    <string name="me">我</string>
    <string name="exit">退出登录</string>
    <string name="update">版本升级</string>
    <string name="clean">清除缓存</string>
    <string name="setwifi">在wifi下播放视频</string>
    <string name="filedownload">文件下载</string>
    <string name="contact">联系我们</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_myinfo">MyinfoActivity</string>
    <string name="userinfo">个人信息</string>
    <string name="infoback">返回</string>
    <string name="head">头像</string>
    <string name="nicheng">昵称</string>
    <string name="name">姓名</string>
    <string name="sex">性別</string>
    <string name="ipone">手机</string>
    <string name="email">邮箱</string>
    <string name="tel">电话</string>
    <string name="country">国家/地区</string>
    <string name="adress">地址</string>
    <string name="Personalitysignature">个性签名</string>
    <string name="aid">AID号</string>
    <string name="title_activity_agmoo">AgmooActivity</string>
    <string name="title_activity_face_book">FaceBookActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feeback">用户反馈</string>
    <string name="Productshow">产品展示</string>
    <string name="reboot">重启</string>
    <string name="wlan">WLAN</string>
    <string name="system">系統应用</string>
    <string name="battery">耗电</string>
    <string name="bluetooth">蓝牙</string>
    <string name="unsystem">非应用系统</string>
    <string name="signal">信号</string>
    <string name="camera">相机</string>
    <string name="other">其他</string>
    <string name="title_activity_sex_select">SexSelectActivity</string>
    <string name="fabu">AMGOO发布会</string>
    <string name="productuuser">产品使用</string>
    <string name="skill">销售技巧</string>
    <string name="culture">企业文化</string>
    <string name="amgoo">agmoo手机宣传片</string>
    <string name="customAlbum_camera">照相</string>
    <string name="customAlbum_fromalbum">相册</string>
    <string name="customAlbum_cancel">取消</string>
    <string name="finish">完成</string>
    <string name="picture_filtering">最多只能选择4张图</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="consult_quest_list">反馈</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="restart">重启反馈</string>
    <string name="wifi">wifi反馈</string>
    <string name="sys">系统反馈</string>
    <string name="batty">电池反馈</string>
    <string name="btooth">蓝牙反馈</string>
    <string name="unsys">非系统反馈</string>
    <string name="sigl">信号反馈</string>
    <string name="camer">相机反馈</string>
    <string name="other1">其他反馈</string>
    <string name="jiazai">正在加载...</string>
    <string name="shaohou">请稍后...</string>
    <string name="selectpicture">选择图片</string>
    <string name="cheive">完成</string>
    <string name="zhang">张</string>
    <string name="setsd">没有查到到SD卡，请检查您的手机设置</string>
    <string name="answer">个回答</string>
    <string name="solve">已解决</string>
    <string name="last">没有更多数据</string>
    <string name="facebok">FACEBOOK讨论组</string>
    <string name="send">发送</string>
    <string name="question">添加您遇到的问题(选填)</string>
    <string name="genman">男</string>
    <string name="genwomen">女</string>
    <string name="title_activity_nice_name">NiceNameActivity</string>
    <string name="nicename">昵称设置</string>
    <string name="baocun">保存</string>
    <string name="title_activity_ipone_number">IponeNumberActivity</string>
    <string name="nice">昵 称：</string>
    <string name="telipone">手机号码：</string>
    <string name="setipone">手机号码设置</string>
    <string name="noset">未设置</string>
    <string name="emailset">邮箱设置</string>
    <string name="emailshow">邮箱:</string>
    <string name="title_activity_tel">TelActivity</string>
    <string name="telset">电话设置</string>
    <string name="telshow">电话：</string>
    <string name="title_activity_adress">AdressActivity</string>
    <string name="setadress">地址设置</string>
    <string name="adressshow">地址：</string>
    <string name="title_activity_person_sign">PersonSignActivity</string>
    <string name="personsign">个性签名</string>
    <string name="personsignshow">个性签名：</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_my_work">MyWorkActivity</string>
    <string name="maintext">.HSDPA+ 21.1Mbps 3G unlocked Android smartphone\n.解锁和准备使用在您的网络.\n.四核处理器的性能和更好的1.3GHz：增加速度，允许一个优越的多任务的经验\n.4.4“奇巧”股票Android OS：近，方便和易于定制，您的电话。无膨胀。
        \n.5.0“秦皇岛/ IPS液晶显示：960×540 immerse自己a电影体验！\n.2MP相机8MP相机后，前：把高质量的图片和商店，那些难忘的时刻。\n.双SIM卡双号码：允许你抱着一次特殊的身份和双你的钱，当你旅行和ensures无论你是你的缺点\n.8G内存（ROM）及内科：1G RAM存储一堆媒体在您的设备有一个滞后的不担心
        \n.2000mAh的电池（可多达4.6小时谈话／150小时待机）\n.音频格式：MP3，MIDI，WAV，ACC，\n.视频格式：MP4，DIVX，XVID，H.263和H.264\n.调频收音机调谐到广播自由：无论你的节目或新闻）\n.是一个USB到USB充电器微USB墙，连接电缆，和指令手册，在耳耳机。</string>
    <string name="cleandata">清除缓存成功</string>
    <string name="title_activity_regiest">RegiestActivity</string>
    <string name="login">登录</string>
    <string name="regiest">注册</string>
    <string name="school">学堂</string>
    <string name="financialstaff">联系财务人员</string>
    <string name="waitfinancial">待收款</string>
    <string name="getfinancial">收款待审核</string>
    <string name="obtainfinancial">收款已审核</string>
    <string name="contactstaff">联系财务人员</string>
    <string name="title_activity_sale_record">SaleRecordActivity</string>
    <string name="salerecord">销售记录</string>
    <string name="phonemodel">手机型号：</string>
    <string name="unitprice">单价：</string>
    <string name="commission">提成比例：</string>
    <string name="phonecount">数量：</string>
    <string name="title_activity_account_paid">AccountPaidActivity</string>
    <string name="accountpaid">待付款</string>
    <string name="title_activity_commit_sale_info">CommitSaleInfoActivity</string>
    <string name="commitsaleinfo">提交销售信息</string>
    <string name="phoneimmi">IMMI号:</string>
    <string name="phonexinghao">手机型号:</string>
    <string name="count">销售个数:</string>
    <string name="salename">销售员姓名:</string>
    <string name="price">销售价格:</string>
    <string name="relation">联系方式:</string>
    <string name="commitinfo">提交信息</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="worktime">上班时间</string>
    <string name="companytel">电话</string>
    <string name="title_activity_sevice_adress">SeviceAdressActivity</string>
    <string name="seviceadressname">网点负责人：</string>
    <string name="calltel">呼叫</string>
    <string name="title_activity_ture_query">TureQueryActivity</string>
    <string name="title_activity_account_aready_pay">AccountAreadyPayActivity</string>
    <string name="title_activity_draw_percentage">DrawPercentageActivity</string>
    <string name="DrawPercentage">提成记录</string>
    <string name="countary">国家：</string>
    <string name="registsucess">注册成功</string>
    <string name="setscucess">设置成功</string>
    <string name="feebackcontent">请填写反馈的内容</string>
    <string name="title_activity_apply_finance_or_sale">ApplyFinanceOrSaleActivity</string>
    <string name="applyfinance">申请为财务</string>
    <string name="applysale">申请为销售</string>
    <string name="saler">你已成为销售人员</string>
    <string name="financer">你已成为财务人员</string>
    <string name="title_activity_file_class">FileClassActivity</string>
    <string name="fileclass">文件分类</string>
    <string name="turephone">正品amgoo手机</string>
    <string name="falsephone">非正品amgoo手机</string>
    <string name="title_activity_down_load_file">DownLoadFileActivity</string>
    <string name="downloadfile">文件下载</string>
    <string name="xlistview_footer_hint_appli">没有更多数据</string>
    <string name="nomoredata">没有更多数据</string>
    <string name="title_activity_my_fee_back">MyFeeBackActivity</string>
    <string name="myfeeback">我的反馈</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_fee_ask_detail">FeeAskDetailActivity</string>
    <string name="feeaskdetail">反馈详情</string>
    <string name="title_activity_dddddddddn">DDDDDDDDDnActivity</string>
    <string name="title_activity_mai">MaiActivity</string>
    <string name="title_activity_feed_back_ask_detail">FeedBackAskDetailActivity</string>

</resources>