<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity" >

    <RelativeLayout
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/topbar_bg" >

        <TextView
            android:id="@+id/mTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="2dp"
            android:text="@string/contact"
            android:textColor="@android:color/white"
            android:textSize="@dimen/design_size_32" />

        <TextView
            android:id="@+id/tv_contactback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/topbar_arrow_left"
            android:text="@string/infoback"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/mTopBar"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:text="@string/worktime" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="9:00-12:00,2:00-5:30" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_companytel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/lin_time" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:text="@string/companytel" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/lin_companytel" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/topbar_bg"
            android:text="@string/tel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@color/divide_line" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/topbar_bg"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        style="@+id/viewbottom"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:background="@color/divide_line" />

</RelativeLayout>