<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_frame_radius_white"
            android:orientation="vertical"
            android:padding="5dp" >

            <Button
                android:id="@+id/publishfun_btn_camera"
                style="@style/style_text_blue_16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_press_bg_white_and_gray"
                android:gravity="center"
                android:text="@string/customAlbum_camera" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/topbar_bg" />

            <Button
                android:id="@+id/publishfun_btn_photo"
                style="@style/style_text_blue_16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_press_bg_white_and_gray"
                android:gravity="center"
                android:text="@string/customAlbum_fromalbum" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/topbar_bg" />

            <Button
                android:id="@+id/lin_cancle"
                style="@style/style_text_blue_16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_press_bg_white_and_gray"
                android:gravity="center"
                android:text="@string/customAlbum_cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>