<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    tools:context=".NiceNameActivity" >

    <RelativeLayout
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/topbar_bg" >

        <TextView
            android:id="@+id/mTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="2dp"
            android:text="@string/setadress"
            android:textColor="@android:color/white"
            android:textSize="@dimen/design_size_32" />

        <TextView
            android:id="@+id/tv_adressback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/topbar_arrow_left"
            android:text="@string/infoback"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_adresssend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/baocun"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/mTopBar"
        android:layout_marginTop="16dp"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view1"
        android:background="@android:color/white"
        android:gravity="center"
        android:minHeight="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/userNichenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/adressshow"
            android:textColor="@color/menu_text_color"
            android:textSize="18sp" />

        <com.amgoo.tool.ClearEditText
            android:id="@+id/adressContext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/menu_text_color"
            android:textColorHint="@color/time_color"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/LinearLayout1"
        android:background="@color/divide_line" />

</RelativeLayout>