<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CommitSaleInfoActivity" >

    <RelativeLayout
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/topbar_bg"
        android:visibility="visible" >

        <TextView
            android:id="@+id/mTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="2dp"
            android:text="@string/commitsaleinfo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/design_size_32" />

        <TextView
            android:id="@+id/tv_infoback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/topbar_arrow_left"
            android:text="@string/infoback"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_imi"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/mTopBar"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/phoneimmi" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewimi"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_imi"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/lin_xinghao"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewimi" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/phonexinghao" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewxinghao"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_xinghao"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/lin_count"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewxinghao" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/count" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewcount"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_count"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/lin_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewcount" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/price" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewprice"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_price"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/lin_saleperson"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewprice" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/salename" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewsaleperson"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_saleperson"
        android:background="@color/divide_line" />

    <LinearLayout
        android:id="@+id/lin_relation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewsaleperson" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/relation" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/viewrelation"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/lin_relation"
        android:background="@color/divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/viewrelation"
        android:layout_marginTop="16dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/topbar_bg"
            android:gravity="center"
            android:text="@string/commitinfo"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>